deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-python-web-app-deployment
  namespace: pythonwebapp
  labels:
    app: python-web-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: python-web-app
  template:
    metadata:
      labels:
        app: python-web-app
    spec:
      containers:
        - name: python-web-app
          image: richard92/my-python-app:latest
          imagePullPolicy: Always
          command: ["/bin/sh"]
          args:
            - "-c"
            - "while true; do echo hello; sleep 10; done"
          ports:
            - containerPort: 5000
          resources:
            requests:
              memory: "2Gi"
              cpu: "1m"
            limits:
              memory: "10Gi"
              cpu: "500m"
