ingress-deployment.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-pythonwebapp
  namespace: pythonwebapp
spec:
  rules:
  - host: foo.bar.com
    http:
      paths:
      - pathType: Prefix
        path: "/bar"
        backend:
          service:
            name: pythonwebapp
            port:
              number: 80
